--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "music-metadata-browser": "^2.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.10.3",
     "soundtouchjs": "^0.2.1",
     "tonal": "^5.0.0",
     "tone": "^14.9.17"
