--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "howler": "^2.2.4",
     "lucide-react": "^0.294.0",
     "meyda": "^5.6.3",
